--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,1 @@
-{{ title }}
-
-<label for="name">Nombre</label><input id="name" type="text" [(ngModel)]="name">
-<button (click)="addItem()" >Add Item</button>
-
-<label for="coupon">Cupón de descuento</label><input id="coupon" type="number" [(ngModel)]="coupon">
-
-<div *ngIf="title === 'gari'" >Esto es un div</div>
-
-<div [ngSwitch]="coupon" >
-  <p *ngSwitchCase="10" >Tienes 10 % de descuento</p>
-  <p *ngSwitchCase="20" >Tienes 10 % de descuento</p>
-  <p *ngSwitchCase="30" >Tienes 10 % de descuento</p>
-  <p *ngSwitchCase="40" >Tienes 10 % de descuento</p>
-  <p *ngSwitchDefault="0" >No hay cupon de descuento</p>
-</div>
-
-<input type="text" [(ngModel)]="power" >{{ power | exponential }}
-
-<ul>
-  <li *ngIf="items.length === 0">La lista está vacía</li>
-  <li *ngFor="let item of items; index as i" >{{ i }} - {{ item }} <button (click)="deleteItem(i)" >delete</button> </li>
-</ul>
-
-
-
-<div class="product-grid">
-  <app-product 
-    *ngFor="let product of products" 
-    (productClicked)="clickProduct($event)" 
-    [product]="product">
-  </app-product>
-</div>
-
+<router-outlet></router-outlet>
