--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,29 +1,60 @@
 /* You can add global styles to this file, and also import other style files */
-
+/*
 body {
     margin: 0px;
     padding: 0px;
-}
+}*/
 
 .product-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    gap: 50px 20px;
+}
+
+.container {
+    width: 100%;
+    padding-top: 4px;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.util-margin-left {
+    margin-left: 8px;
 }
 
 @media(min-width: 576px) {
     .product-grid {
         grid-template-columns: repeat(2, 1fr);
-    }   
+    }
+    .container {
+        max-width: 768px;
+        padding-right: 16px;
+        padding-left: 16px;
+    }
 }
 
 @media(min-width: 768px) {
     .product-grid {
         grid-template-columns: repeat(3, 1fr);
+    }
+    .container {
+        max-width: 1080px;
+        padding-right: 20px;
+        padding-left: 20px;
     }   
 }
 
 @media(min-width: 1366px) {
     .product-grid {
         grid-template-columns: repeat(4, 1fr);
-    }   
+    }
+    .container {
+        max-width: 1280px;
+        padding-right: 24px;
+        padding-left: 24px;
+    }  
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
