se incluyen las coas para la parte del admin que se encargará de matener los obejtos que existen y los objetos que llegan, así como los que ya no se tienen en inventario

--- a/src/app/product/components/product-detail/product-detail.component.html
+++ b/src/app/product/components/product-detail/product-detail.component.html
@@ -1,11 +1,16 @@
-<div>
-    <img [src]="product.image" alt="">
+<div *ngIf="product">
+    <div>
+        <img [src]="product.image" alt="">
+    </div>
+    
+    <div>
+        <ul>
+            <li>Nombre: {{ product.title }}</li>
+            <li>Precio: {{ product.price | currency }}</li>
+        </ul>
+        <p>{{ product.description }}</p>
+    </div> 
 </div>
-
-<div>
-    <ul>
-        <li>Nombre: {{ product.title }}</li>
-        <li>Precio: {{ product.price | currency }}</li>
-    </ul>
-    <p>{{ product.description }}</p>
-</div>
+<button mat-button (click)="createProduct()" >Crear Producto</button>
+<button mat-raised-button (click)="updateProduct()">Actualizar producto</button>
+<button mat-raised-button (click)="deleteProduct()">Eliminar producto</button>
