--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -6,8 +6,9 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/admin/create">Create product</a>
-      <a mat-list-item routerLink="/admin/edit">Link 2</a>
-      <a mat-list-item routerLink="/admin/delete">Link 3</a>
+      <!--<a mat-list-item routerLink="/admin/edit">Link 2</a>-->
+      <!--<a mat-list-item routerLink="/admin/delete">Link 3</a>-->
+      <a mat-list-item routerLink="/admin/products">Productos</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
