--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -35,6 +35,12 @@
         <div class="col-xs-12 col-md-4">
           <div class="box">
             <h3>Contacto</h3>
+            <mat-form-field color="accent">
+              <input matInput placeholder="Escriba su correo" [formControl]="emailField" type="email"  >
+            </mat-form-field>
+            <button mat-raised-button [disabled]="emailField.invalid" (click)="sendMail()" color="accent" >Suscribirse</button>
+            
+
             <!-- <mat-form-field color="accent" class="full-width">
                   <input [formControl]="emailInput" matInput placeholder="Su correo" type="email">
                 </mat-form-field>
